# numba4jax

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  prova.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: CI.yml  formatting_check.yml  publish.yml
docs/: conf.py  index.rst
examples/: sample_1.py
numba4jax/: __init__.py
numba4jax/_src/: __init__.py  c_api.py  config_flags.py  primitive_utils.py  xla_utils.py
numba4jax/_src/backends/: __init__.py  _cuda.py  _method_cache.py  cpu.py  gpu.py  utils.py
src/numba4jax/: skeleton.py
tests/: conftest.py  test_numba4jax.py  test_skeleton.py
